z-index-fix

--- a/src/app/sp-search/sp-search.component.scss
+++ b/src/app/sp-search/sp-search.component.scss
@@ -37,6 +37,7 @@
     position: absolute;
     left: 0;
     right: 0;
+    z-index: 1;
     //transition: height .25s ease;
 
   &:focus {
